Scale polished. Jan preberi in dodaj odvzemi po želji.

--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -561,12 +561,12 @@ We also have a problem with the quality of the test data. For example, if we loo
 
 \subsection{Evaluation Of Cross-Lingual Event Linking}
 
-In order to determine how accurately we can predict cluster equivalence we have performed two experiments. In the first experiment we wanted to test how well do the individual approaches for cross-lingual article linking perform when used for linking the clusters about the same event. In the second experiment we tested how accurate is the prediction model when trained on different subsets of learning features. To evaluate the prediction accuracy for a given dataset we used 10-fold cross validation. In this technique, the dataset is partitioned into 10 folds, where 9 folds are used for training a model and the left-out fold is then used to test the accuracy of the model. The learning and testing process is repeated 10 times, each time with a different left-out fold.
+In order to determine how accurately we can predict cluster equivalence we have performed two experiments in multi-lingual setting using English, German and Spanish language for which we had labeled data to evaluate the linking performance. In the first experiment we wanted to test how well do the individual approaches for cross-lingual article linking perform when used for linking the clusters about the same event. In the second experiment we tested how accurate is the prediction model when trained on different subsets of learning features. To evaluate the prediction accuracy for a given dataset we used 10-fold cross validation. In this technique, the dataset is partitioned into 10 folds, where 9 folds are used for training a model and the left-out fold is then used to test the accuracy of the model. The learning and testing process is repeated 10 times, each time with a different left-out fold.
 
-In Section~\ref{sec:models} we have described three main algorithms for identifying similar articles in different languages. These algorithms were $k$-means, LSI and CCA. To test which of these algorithms performs best we performed the following test. Using each algorithm, we analyzed all articles in Event Registry to find the most similar articles in other languages. The values of the cross-lingual article linking features (\texttt{linkCount} and \texttt{avgSimScore}) were then recomputed for all annotated learning examples. A dataset with only these two features and the label was constructed and used to test how accurate prediction models can be induced using the data. The results of the experiment are shown in Table~\ref{table:linkingEvalAlgos}. The table shows for each of the algorithms the obtained classification accuracy, precision and recall. We can see that the most informative features for cluster linking are obtained using the CCA algorithm, while $k$-means performs the worse. Firstly we verified the AMRR (average of mean reciprocal ranks over all language pairs) performance of approaches by holding out $15000$ aligned test documents and using $300000$ aligned documents
- as the training set. Figure~\ref{pic:AMRR} shows AMRR score as the function of the number of feature vectors. It is clear that CCA outperforms LSI approach and K-means lags far behind.
-Furthermore we inspected how number of features influences the accuracy of cluster linking. As we can see from Table~\ref{table:linkingEvalAlgos} choosing number of features vectors larger than $500$ barely effects linking performance. That is probably due to overfitting. Moreover we tested the performance of detecting large/small cluster linking, see Table~\ref{table:linkingEvalAlgosLargeSmall}.  As expected we obtained that it is harder to link small clusters and we need better retrieval accuracy in such cases. CCA outperforms other methods in this sense also, probably as it has the best retrieval performance, see Figure~\ref{pic:AMRR}. This can be also used
-to get representatives of clusters more efficiently.
+In Section~\ref{sec:models} we have described three main algorithms for identifying similar articles in different languages. These algorithms were $k$-means, LSI and CCA. To test which of these algorithms performs best we performed the following test. As a training set we used common Wikipedia alignment for all three languages. Using each algorithm, we analyzed all articles in Event Registry to find the most similar articles in other languages. The values of the cross-lingual article linking features (\texttt{linkCount} and \texttt{avgSimScore}) were then recomputed for all annotated learning examples. A dataset with only these two features and the label was constructed and used to test how accurate prediction models can be induced using the data. The results of the experiment are shown in Table~\ref{table:linkingEvalAlgos}. The table shows for each of the algorithms the obtained classification accuracy, precision and recall. We can see that the most informative features for cluster linking are obtained using the CCA or the LSI algorithm, while $k$-means performs the worse. To decide which method to use we made some further experiments. Firstly we verified the AMRR (average of mean reciprocal ranks over all language pairs) performance of approaches on Wikipedia data by holding out $15000$ aligned test documents and using $300000$ aligned documents
+ as the training set. Figure~\ref{pic:AMRR} shows AMRR score as the function of the number of feature vectors. It is clear that CCA outperforms LSI approach and K-means lags far behind when testing on Wikipedia data. Similar performance of the LSI and CCA for cluster linking can be explained by domain missmatch, we train and test our model  AMRR performance on Wikipedia data but at the end we apply it to the news domain. Sadly we do not have any readily available data for this domain so we were not able to test properly.
+Furthermore we inspect how number of features influences the accuracy of cluster linking. As we can see from Table~\ref{table:linkingEvalAlgos} choosing number of features vectors larger than $500$ barely effects linking performance. That is probably due to overfitting. Moreover we tested the performance of detecting large/small cluster linking, see Table~\ref{table:linkingEvalAlgosLargeSmall}. Large clusters aggregate a lot of information so the accuracy is not so important as long as we assign to correct clusters. In the case of small clusters accuracy should matter more.  As expected we obtained that it is harder to link small clusters and we need better retrieval accuracy in such cases. CCA outperforms other methods in this sense, probably as it has the best retrieval performance, see Figure~\ref{pic:AMRR}. Added accuracy is also beneficial when we want
+to pick good representatives of clusters. Therefore we decided to use CCA for cluster linking.
 
 %{\oldText{TODO:} add some explanation why this might be so.}
 %\emph{Andrej adds some tests, new experiment description graphs, and explanations for performance, done by Monday}
@@ -628,7 +628,7 @@ to get representatives of clusters more efficiently.
 
 
 
-In the second experiment we wanted to evaluate how relevant individual groups of features are to correctly determine cluster equivalence. For this purpose we tested the accuracies obtained using individual groups of features, as well as using different combination of groups. Since we found the CCA to perform best of the three algorithms, we recomputed $500$ feature vectors with better accuracy and used it to compute the values of the cross-lingual article linking features. Results of the evaluation are shown in Table~\ref{table:linkingEval}. We can see that using a single group of features, the highest prediction accuracy can be achieved using the concept related features. The classification accuracy in this case is 88.8\%. By additionally including also the cross-lingual article linking features, the classification accuracy rises slightly to 89.2\%. Using all three groups of features, the achieved accuracy is 89.6\%.
+In the second experiment we wanted to evaluate how relevant individual groups of features are to correctly determine cluster equivalence. For this purpose we tested the accuracies obtained using individual groups of features, as well as using different combination of groups. Since we found the CCA to perform best of the three algorithms, we used it to compute the values of the cross-lingual article linking features. Results of the evaluation are shown in Table~\ref{table:linkingEval}. We can see that using a single group of features, the highest prediction accuracy can be achieved using the concept related features. The classification accuracy in this case is 88.8\%. By additionally including also the cross-lingual article linking features, the classification accuracy rises slightly to 89.2\%. Using all three groups of features, the achieved accuracy is 89.6\%.
 Based on the results we can make the following conclusions. The cross-lingual similarity algorithms provide valuable information that can be used to identify clusters that describe the same event in different languages. The computed features are however significantly less informative compared to the features computed on the annotated concepts. Nevertheless, the cross-lingual article similarity features are very important for two reasons. The first reason is that they allow us to identify for a given cluster a limited set of candidate clusters that are potentially equivalent. This is a very important feature since it reduces the search space for several orders of magnitude. The second reason for the importance of these features is that concept annotations are not available for all articles. Annotation of news articles is computationally intensive and can only be done for a subset of collected articles.
 
 %\begin{table}[h]
@@ -655,7 +655,7 @@ Based on the results we can make the following conclusions. The cross-lingual si
   \hline
   \cline{1-4}
   Features & CA & Precision & Recall \\ \cline{1-4}
-  CCA & 77.6\% & 0.783 & 0.811 \\ \cline{1-4}
+  CCA & 78.2\% & 0.763 & 0.816 \\ \cline{1-4}
   Concepts & 88.8\% & 0.884 & 0.891 \\ \cline{1-4}
   Misc & 65.3\% & 0.718 & 0.500 \\ \cline{1-4}
   CCA + concepts & 89.2\% & 0.891 & 0.893 \\ \cline{1-4}
@@ -678,16 +678,18 @@ Based on the results we can make the following conclusions. The cross-lingual si
 %(n \over 2) 500X500 proxy matrices, 300000x500 Projector matrices, 430000x500 data
 %Premultiply with proxy matrices, compare blockwise!
 One of the main advantages of our approach is that scales really well. It is fast, very robust to quality of training data, easily extendable, simple to implement and with low machine requirements. The similarity pipeline is the most demanding part and currently runs on two Intel Xeon E5-2667 v2, 3.30GHz processor machine with 256GB of RAM. That is enough to do similarity computation over 150 languages if needed. It currently uses Wikipedia as freely available knowledge base.
-Similarity pipeline dramastically reduces the search space when linking clusters. 
+Similarity pipeline dramastically reduces the search space when linking clusters.
 
-Currently we compute similarities over $24$ languages with tags: eng, spa, deu, zho, ita, fra, rus, swe, nld, tur, jpn, por, ara, fin, ron, kor, hrv, tam, hun, slv, pol, srp, cat, ukr but we support up to $100$ top Wikipedis languages. Our data stream is Newsfeed (http://newsfeed.ijs.si/) that produces $430k$ unique articles per day. Our system currently computes 400k similiarites per 200ms, that means that we compute $16*10^10$ similarities per day. We
-store one day buffer for every language, for that we need 1.5GB of memory, we store documents as 500 dimensional vectors. We must note that time complexity of similarity computations scales linearly with dimension of the feature space and does not  depend of number of languages. For each article we compute top $10$  most similar ones in every other language.
-For all linear algebra matrix and vector operations we use high performance numerical libraries as BLAS, OPENBLAS and Intel MKL. This currently allows us to process more than million articles per day.
-In our current implementation we use variation of hub approach. Our projector matrices are of size $500\times 300000,$ so every projector takes about $1.1$ GB of RAM. Moreover we need proxy matrices of size $500x500$ for every language pair. That is 0.5 GB for $24$ languages and $9.2$ GB for $100$ languages. All together we need around 135 GB of RAM for the system with 100 languages. Using proxy matrices we can project all the input documents in the common space. That enables us to do blockwise similarity computations and
+Currently we compute similarities over $24$ languages with tags: eng, spa, deu, zho, ita, fra, rus, swe, nld, tur, jpn, por, ara, fin, ron, kor, hrv, tam, hun, slv, pol, srp, cat, ukr but we support up to $100$ top Wikipedis languages. Our data stream is Newsfeed (http://newsfeed.ijs.si/) that produces $430k$ unique articles per day. Our system currently computes 400k similiarites per 200ms, that means that we compute $16 \cdot 10^{10}$ similarities per day. We
+store one day buffer for every language, for that we need 1.5 GB of memory, we store documents as 500 dimensional vectors. We must note that time complexity of similarity computations scales linearly with dimension of the feature space and does not  depend of number of languages. For each article we compute top $10$  most similar ones in every other language.
+For all linear algebra matrix and vector operations we use high performance numerical linear algebra libraries as BLAS, OPENBLAS and Intel MKL. This currently allows us to process more than million articles per day.
+In our current implementation we use variation of hub approach. Our projector matrices are of size $500\times 300000,$ so every projector takes about $1.1$ GB of RAM. Moreover we need proxy matrices of size $500\times500$ for every language pair. That is 0.5 GB for $24$ languages and $9.2$ GB for $100$ languages. All together we need around 135 GB of RAM for the system with 100 languages.
+ Usage of proxy matrices enables projection of all input documents in the common space and handling language pairs with missing or low alignment. That enables us to do block-wise similarity computations and
 additional improvement in our system efficiency. Our code can be therefore easily parallelized using matrix multiplication instead of doing more matrix - vector multiplications. This speeds up our code by factor around $4.$ In this way we obtain some caching gains and ability to use vectorization.
 Our system is also easily extendable. If we want to add new language we only need to compute a projector matrix and proxy matrices with all other already available languages.
 
 Add the conclusion of the story and the wrap up, Andrej needs help with this.
+We presented the system ...
 
 
 \acks{The authors wish to thank blah blah blah.}
