--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -598,7 +598,9 @@ We also have a problem with the quality of the test data. For example, if we loo
 
 In order to determine how accurately we can predict cluster equivalence we have performed two experiments in multi-lingual setting using English, German and Spanish language for which we had labeled data to evaluate the linking performance. In the first experiment we wanted to test how well do the individual approaches for cross-lingual article linking perform when used for linking the clusters about the same event. In the second experiment we tested how accurate is the prediction model when trained on different subsets of learning features. To evaluate the prediction accuracy for a given dataset we used 10-fold cross validation. In this technique, the dataset is partitioned into 10 folds, where 9 folds are used for training a model and the left-out fold is then used to test the accuracy of the model. The learning and testing process is repeated 10 times, each time with a different left-out fold.
 
-In Section~\ref{sec:models} we have described three main algorithms for identifying similar articles in different languages. These algorithms were $k$-means, LSI and CCA. To test which of these algorithms performs best we performed the following test. As a training set we used common Wikipedia alignment for all three languages. Using each algorithm, we analyzed all articles in Event Registry to find the most similar articles in other languages. The values of the cross-lingual article linking features (\texttt{linkCount} and \texttt{avgSimScore}) were then recomputed for all annotated learning examples. A dataset with only these two features and the label was constructed and used to test how accurate prediction models can be induced using the data. The results of the experiment are shown in Table~\ref{table:linkingEvalAlgos}. The table shows for each of the algorithms the obtained classification accuracy, precision and recall. We can see that the most informative features for cluster linking are obtained using the CCA or the LSI algorithm, while $k$-means performs the worse. To decide which method to use we made some further experiments. Firstly we verified the AMRR (average of mean reciprocal ranks over all language pairs) performance of approaches on Wikipedia data by holding out $15000$ aligned test documents and using $300000$ aligned documents
+In Section~\ref{sec:models} we have described three main algorithms for identifying similar articles in different languages. These algorithms were $k$-means, LSI and CCA. To test which of these algorithms performs best we performed the following test. As a training set we used common Wikipedia alignment for all three languages. Using each algorithm, we analyzed all articles in Event Registry to find the most similar articles in other languages. The values of the cross-lingual article linking features (\texttt{linkCount} and \texttt{avgSimScore}) were then recomputed for all annotated learning examples. A dataset with only these two features and the label was constructed and used to test how accurate prediction models can be induced using the data. The results of the experiment are shown in Table~\ref{table:linkingEvalAlgos}. The table shows for each of the algorithms the obtained classification accuracy, precision and recall. We can see that the most informative features for cluster linking are obtained using the CCA or the LSI algorithm, while $k$-means performs the worse. 
+
+To decide which method to use we made some further experiments. Firstly we verified the AMRR (average of mean reciprocal ranks over all language pairs) performance of approaches on Wikipedia data by holding out $15000$ aligned test documents and using $300000$ aligned documents
  as the training set. Figure~\ref{pic:AMRR} shows AMRR score as the function of the number of feature vectors. It is clear that CCA outperforms LSI approach and K-means lags far behind when testing on Wikipedia data. Similar performance of the LSI and CCA for cluster linking can be explained by domain missmatch, we train and test our model  AMRR performance on Wikipedia data but at the end we apply it to the news domain. Sadly we do not have any readily available data for this domain so we were not able to test properly.
 Furthermore we inspect how number of features influences the accuracy of cluster linking. As we can see from Table~\ref{table:linkingEvalAlgos} choosing number of features vectors larger than $500$ barely effects linking performance. That is probably due to overfitting. Moreover we tested the performance of detecting large/small cluster linking, see Table~\ref{table:linkingEvalAlgosLargeSmall}. Large clusters aggregate a lot of information so the accuracy is not so important as long as we assign to correct clusters. In the case of small clusters accuracy should matter more.  As expected we obtained that it is harder to link small clusters and we need better retrieval accuracy in such cases. CCA outperforms other methods in this sense, probably as it has the best retrieval performance, see Figure~\ref{pic:AMRR}. Added accuracy is also beneficial when we want
 to pick good representatives of clusters. Therefore we decided to use CCA for cluster linking.
@@ -706,13 +708,13 @@ Based on the results we can make the following conclusions. The cross-lingual si
 We now discuss some aspects of the methods and the system as a whole.
 \begin{itemize}
 \item \textbf{LSI and hub CCA} - We first comment on the empirical validation of LSI and hub CCA. On the task of mate retrieval we observe that refining the LSI based projections with hub CCA leads to improved retrieval precision, but the methods perform comparably on the task of event linking. Further inspection showed that the CCA based approach reached a higher precision on smaller clusters. The interpretation is that the linking features are highly aggregated for large clusters, which compensates the lower per-document percision of LSI. Another possible reason is, that the advantage that we show on Wikipedia is lost on the news domain - which indicates that domain adaptation should be explored.
-    
+
 \item \textbf{Features} - The experiments show that the hub CCA based features present good baseline, which can greatly benefit from additional semantic extraction based features. Even though the CCA based features do not greatly improve the system performance when the semantic features are used, there are two main benefits in the approach: the linking process can be sped up (smaller candidate cluster sets), and in the case when semantic extraction is not possible.
 
-\item \textbf{Future work} - Currently the system is loosely coupled - the language component is built independently of the rest of the system, in particular the linking component. It is possible that better embeddings can be obtained by methods that jointly optimize a classification task and the embedding.    
-    
+\item \textbf{Future work} - Currently the system is loosely coupled - the language component is built independently of the rest of the system, in particular the linking component. It is possible that better embeddings can be obtained by methods that jointly optimize a classification task and the embedding.
+
     Another point of interest is to evaluate the system on languages with scarce linguistic resources, where semantic annotation might not be available. For this reason, the labelled dataset of linked clusters should to be extended first. The mate retrieval evaluation showed that even for language pairs with no training set overlap, the hub cca recovers some signal.
-    
+
 \end{itemize}
 
 
