--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -722,7 +722,7 @@ We now discuss some aspects of the methods and the system as a whole.
 %Premultiply with proxy matrices, compare blockwise!
 One of the main advantages of our approach is that scales really well. It is fast, very robust to quality of training data, easily extendable, simple to implement and with low machine requirements. The similarity pipeline is the most demanding part and currently runs on two Intel Xeon E5-2667 v2, 3.30GHz processor machine with 256GB of RAM. That is enough to do similarity computation over 150 languages if needed. It currently uses Wikipedia as freely available knowledge base. Similarity pipeline dramastically reduces the search space when linking clusters.
 
-Currently we compute similarities over $24$ languages with tags: eng, spa, deu, zho, ita, fra, rus, swe, nld, tur, jpn, por, ara, fin, ron, kor, hrv, tam, hun, slv, pol, srp, cat, ukr but we support up to $100$ top Wikipedis languages. Our data stream is Newsfeed (http://newsfeed.ijs.si/) that provides $430k$ unique articles per day. Our system currently computes 400k similiarites per 200ms, that means that we compute $16 \cdot 10^{10}$ similarities per day. We
+Currently we compute similarities over $24$ languages with tags: eng, spa, deu, zho, ita, fra, rus, swe, nld, tur, jpn, por, ara, fin, ron, kor, hrv, tam, hun, slv, pol, srp, cat, ukr but we support up to $100$ top Wikipedia languages. Our data stream is Newsfeed (http://newsfeed.ijs.si/) that provides $430k$ unique articles per day. Our system currently computes 400k similiarites per 200ms, that means that we compute $16 \cdot 10^{10}$ similarities per day. We
 store one day buffer for every language, for that we need 1.5 GB of memory, we store documents as 500 dimensional vectors. We must note that time complexity of similarity computations scales linearly with dimension of the feature space and does not  depend of number of languages. For each article we compute top $10$  most similar ones in every other language.
 For all linear algebra matrix and vector operations we use high performance numerical linear algebra libraries as BLAS, OPENBLAS and Intel MKL. This currently allows us to process more than million articles per day.
 In our current implementation we use variation of hub approach. Our projector matrices are of size $500\times 300000,$ so every projector takes about $1.1$ GB of RAM. Moreover we need proxy matrices of size $500\times500$ for every language pair. That is 0.5 GB for $24$ languages and $9.2$ GB for $100$ languages. All together we need around 135 GB of RAM for the system with 100 languages.
